fix #199 black design on iphone

--- a/client_new/css/topBar.css
+++ b/client_new/css/topBar.css
@@ -34,6 +34,7 @@
     line-height: 2rem;
     float: right;
     margin-right: 2rem;
+    cursor: pointer;
 }
 @media handheld, only screen and (max-width: 767px) {
     #top-bar .toggle-view {
